background layout bug on mobile #15

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,10 +12,9 @@
 body {
   background-image: url("../resources/background.jpg");
   background-repeat: no-repeat;
-  background-position: center;
-  background-position-x: center;
   background-attachment: fixed;
-  background-size: 100vw 100vh;
+  background-size: 100vw;
+  min-height: 100%;
   font-family: pokemonFontSolid;
 }
 
